--- a/pewds.html
+++ b/pewds.html
@@ -1,1 +1,1 @@
-<iframe height="160px" width="600" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/UC-lHJZR3Gqxm24_Vd_AJ5Yw" style="border: 0; width:300px; height:80px; background-color: #FFF;"></iframe>
+<iframe height="160px" width="600px" frameborder="0" src="https://akshatmittal.com/youtube-realtime/embed/#!/UC-lHJZR3Gqxm24_Vd_AJ5Yw" style="border: 0; width:300px; height:80px; background-color: #FFF;"></iframe>
